# seekr

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_CN.md  Cargo.toml  README.md  README_CN.md
.github/workflows/: ci.yml
benches/: search_bench.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/embedder/: batch.rs  mod.rs  onnx.rs  traits.rs
src/index/: incremental.rs  mmap_store.rs  mod.rs  store.rs
src/parser/: chunker.rs  mod.rs  summary.rs  treesitter.rs
src/scanner/: filter.rs  mod.rs  walker.rs  watcher.rs
src/search/: ast_pattern.rs  fusion.rs  mod.rs  semantic.rs  text.rs
src/server/: cli.rs  daemon.rs  http.rs  mcp.rs  mod.rs
tests/: integration_test.rs
tests/fixtures/: sample.go  sample.js  sample.py  sample.rs
